2006-05-12  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (gtk_day_view_key_press_event): New function.
	(gtk_day_view_base_class_init): Set WIDGET_CLASS->KEY_PRESS_EVENT
	to it.
	(gtk_day_view_new): Make DAY_VIEW focusable.
	* main.c (new_view): Give CURRENT_VIEW the focus.

2006-05-12  Neal H. Walfield  <neal@gnu.org>

	* alarm-dialog.c (alarm_dialog_init): Connect
	gtk_widget_hide_on_delete to the "delete" signal of WINDOW.

2006-05-12  Neal H. Walfield  <neal@gnu.org>

	* alarm-dialog.c (alarm_dialog_init): Don't use a button box as it
	takes up too much space on a QVGA device.

2006-05-12  Neal H. Walfield  <neal@gnu.org>

	* gtkdatesel.c (gtk_date_sel_size_allocate): New function.
	(gtk_date_sel_class_init): Set WIDGET_CLASS->SIZE_ALLOCATE to it.
	(gtk_date_sel_set_mode): Show DATESEL->YEAR.CONTAINER.

	(month_cell_renderer_class_init): Use a correct type signature to
	avoid a warning.

2006-05-12  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_expose): Don't print the minutes.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (day_view_event_clicked): Improve formatting of the
	information label.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (click_ok): Free the strings returned by
	gtk_text_buffer_get_text and gtk_editable_get_chars.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c (main): Cache the current directory and free it when no
	longer needed.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (click_ok): Let mktime compensate for DST.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c (just_new): Mark static.
	(view_container): Likewise.
	(toolbar): Likewise.
	(day_list): Remove unused declaration.
	(my_icons): Mark static.
	(window_x): Remove definition and make a local variable...
	(main): ... here.
	(window_y): Remove definition and make a local variable...
	(main): ... here.
	(week_offset): Don't explicitly initialize to 0.
	(collected_keys): Mark static.